# Nabo_Pointfoot_Bipedal_Robot

./: LICENSE  README.md  README_zh.md  gitpush.sh  make_and_run.sh  run_sim.sh
nabo_core/: 000.ini  CMakeLists.txt  copy_tools.sh
nabo_core/src/balance/: cbic.cpp  cbic.h  com_data.cpp  com_data.h  mpc.cpp  mpc.h
nabo_core/src/common/: curve.cpp  curve.h
nabo_core/src/estimate/: estimator.cpp  estimator.h
nabo_core/src/manager/: manager.cpp  manager.h  nabo.cpp  nabo.h  nabo_config.h
nabo_core/src/plan/: plan.cpp  plan.h  plan_recover.cpp  plan_recover.h  plan_walk.cpp  plan_walk.h
nabo_core/src/robot/: cpg.cpp  cpg.h  imu.h  robot.cpp  robot.h
nabo_core/test/: main.cpp  main.h
nabo_core/utility/: algorithms.cpp  algorithms.h  eigen.h  ini.cpp  ini.h  iopack.cpp  iopack.h
nabo_mujoco/: 000.ini  CMakeLists.txt  main.cpp
nabo_mujoco/model/: nabo_pointfoot.xml  nabo_pointfoot_spherefoot.xml
nabo_mujoco/model/assets/: common.xml  world_axes.xml
nabo_mujoco/mujoco/: libmujoco.so.3.1.4
nabo_mujoco/nabo/: nabo_config.h
nabo_mujoco/python_scripts/: mjc_calc_body_inertia.py  rbdl_py_model_test_nabo_pointfoot.py  test.xml  viewer.py
